# ToolboxPlugins

./: .gitignore  CMakeLists.txt  LICENSE
DailyCapPlugin/: CMakeLists.txt
DailyCapPlugin/src/: DailyCap.cpp  DailyCap.h  DailyCapPlugin.cpp  DailyCapPlugin.h  DailyCapWithBonusWeek.cpp  DailyCapWithBonusWeek.h  ResetTime.cpp  ResetTime.h
DamageTakenPlugin/: CMakeLists.txt
DamageTakenPlugin/src/: DamageTakenPlugin.cpp  DamageTakenPlugin.h
cmake/: gwtoolboxpp.cmake
